--- a/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
@@ -1,10 +1,14 @@
 .news {
     position: relative;
     padding: 150px 0 170px;
-    background-image: url(../images/news-bg.jpg);
+    background-image: url('#{$base-img-path}/images/news-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    @include media(sm) {
+        padding: 100px 0 100px;
+    }
 
     // .news__title
 
@@ -14,8 +18,12 @@
         color: $color-white;
         text-align: center;
         font-size: 44px;
-        font-weight: 700;
+        font-weight: $font-weight-title;
         margin: 0 0 90px;
+
+        @include media(sm) {
+            margin: 0 0 45px;
+        }
 
         &::before {
             content: '';
@@ -58,9 +66,9 @@
     &__title {
         @include ellipsis(2);
         margin-bottom: 15px;
-        color: #2C4058;
+        color: $color-night-blue;
         font-size: 22px;
-        font-weight: 700;
+        font-weight: $font-weight-title;
 
         @include media(md) {
             font-size: 20px;
@@ -76,10 +84,10 @@
     &__sub-text {
         @include ellipsis(2);
         margin-bottom: 39px;
-        color: #2C4058;
-        font-family: Open Sans;
+        color: $color-night-blue;
+        font-family: "Open Sans";
         font-size: 18px;
-        font-weight: 400;
+        font-weight: $font-weight;
 
         @include media(md) {
             font-size: 16px;
@@ -116,9 +124,9 @@
 
     &__author-name {
         margin: 0 0 6px;
-        color: #2C4058;
+        color: $color-night-blue;
         font-size: 18px;
-        font-weight: 400;
+        font-weight: $font-weight;
         text-transform: uppercase;
         white-space: nowrap;
 
@@ -137,13 +145,10 @@
 
     &__author-data {
         margin: 0;
-        color: #55B7FF;
+        color: $img-bg-first;
         font-size: 14px;
-        font-weight: 400;
     }
 }
-
-.news-card-img-container {}
 
 .news-slider {
     position: relative;
@@ -157,47 +162,29 @@
     }
 }
 
-/* Слайдер */
-.slick-slider {}
 
-/* Слайдер запущен */
-.slick-slider.slick-initialized {}
-
-/* Слайдер с точками */
-.slick-slider.slick-dotted {}
-
-/* Ограничивающая оболочка */
 .news-slider .slick-list {
     overflow: hidden;
 }
 
-/* Лента слайдов */
 .news-slider .slick-track {
     display: flex;
     gap: 35px;
+
+    @include media(sm) {
+        gap: 10px;
+    }
+
+    @include media(xs) {
+        gap: 0;
+    }
 }
 
-/* Слайд */
-.slick-slide {}
-
-/* Слайд активный (показывается) */
-.slick-slide.slick-active {}
-
-/* Слайд основной */
-.slick-slide.slick-current {}
-
-/* Слайд по центру */
-.slick-slide.slick-center {}
-
-/* Клонированный слайд */
-.slick-slide.slick-cloned {}
-
-/* Стрелка */
 .news-slider .slick-arrow {
     position: absolute;
     top: 50%;
     z-index: 10;
-    font-size: 0; //прибрати написи із кнопок
+    font-size: 0;
     height: 43px;
     width: 43px;
     background-color: transparent;
@@ -206,35 +193,31 @@
     padding: 0;
 }
 
-/* Стрелка влево */
 .news-slider .slick-arrow.slick-prev {
     left: -50px;
     bottom: 0;
-    background-image: url('../images/click-down.svg');
+    background-image: url('#{$base-img-path}/images/click-down.svg');
     background-repeat: no-repeat;
     background-position: center;
     transform: rotate(90deg);
-    z-index: 100;
+    z-index: 50;
 }
 
-/* Стрелка вправо */
 .news-slider .slick-arrow.slick-next {
     right: -35px;
-    background-image: url('../images/click-down.svg');
+    background-image: url('#{$base-img-path}/images/click-down.svg');
     transform: rotate(-90deg);
     background-repeat: no-repeat;
     background-position: center;
-    z-index: 100;
+    z-index: 50;
 
     @include media(md) {
         display: none;
     }
 }
 
-/* Стрелка не активная */
 .slick-arrow.slick-disabled {}
 
-/* Точки (булиты) */
 .news-slider .slick-dots {
     display: flex;
     justify-content: center;
@@ -247,12 +230,10 @@
     padding: 0;
 }
 
-/* Список точок */
 .news-slider.slick-dots li {
     list-style: none;
 }
 
-/* Елемент точки */
 .news-slider .slick-dots li button {
     font-size: 0;
     height: 10px;
@@ -264,7 +245,6 @@
     padding: 0;
 }
 
-/* Активна точка */
 .news-slider .slick-dots li.slick-active button {
     background-color: $color-white;
 }
