--- a/students/umienchuk_oksana/project_second_monticello/src/css/_social.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_social.scss
@@ -45,4 +45,8 @@
 .right {
     display: flex;
     justify-content: flex-end;
+
+    @include media(sm) {
+        justify-content: center;
+    }
 }
