--- a/students/umienchuk_oksana/project_second_monticello/src/css/_footer.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_footer.scss
@@ -1,38 +1,60 @@
 .footer {
     position: relative;
-    // overflow-x: hidden;
     width: 100%;
     padding-top: 200px;
+    padding-bottom: 230px;
+    background-image: $linear-gradient,
+    url(#{$base-img-path}/images/footer-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: 1;
 
-    &__img {
-        display: block;
+    @include media(sm) {
+        padding-top: 50px;
+        padding-bottom: 80px;
     }
 
     &::before {
         content: '';
+        display: block;
         position: absolute;
         top: 0;
         bottom: 0;
         right: 0;
         left: 0;
-        background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
-        z-index: -1;
     }
 
-    &__socials {
+    &__social-icon {
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-
-    .text-lorem {}
-
-    &__container {}
-
-    &__form {}
-
-    &__socials {
         max-width: 770px;
         margin: 0 auto;
+        z-index: 10;
+        margin-bottom: 40px;
+
+        @include media(sm) {
+            display: block;
+            text-align: center;
+        }
+    }
+}
+
+.copyrights {
+    max-width: 770px;
+    margin: 0 auto;
+    text-align: start;
+    color: $color-white;
+    font-size: 14px;
+
+    @include media(sm) {
+        text-align: center;
+    }
+}
+
+.footer-logo {
+    @include media(sm) {
+        margin-bottom: 30px;
     }
 }
