--- a/students/umienchuk_oksana/project_second_monticello/src/css/_form.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_form.scss
@@ -1,13 +1,12 @@
 .form-section {
-    border: 1px solid blue;
-    color: #000;
+    color: $color-black;
     max-width: 770px;
     width: 100%;
     margin: 0 auto 60px;
     padding: 90px 60px 0 60px;
     z-index: 10;
     background-color: $color-white;
-    background-image: url('../images/city-form.png');
+    background-image: url('#{$base-img-path}/images/city-form.png');
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: contain;
@@ -17,19 +16,30 @@
     top: -300px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
-    // .form__container
+    @include media(sm) {
+        position: static;
+        transform: translateX(0);
+        margin-bottom: 30px;
+        padding: 80px 30px 0 40px;
+    }
+
+    // .form-section__container
 
     &__container {}
 
-    // .form__title
+    // .form-section__title
 
     &__title {
         position: relative;
         color: $color-night-blue;
         text-align: center;
         font-size: 44px;
-        font-weight: 700;
+        font-weight: $font-weight-title;
         margin: 0 0 42px;
+
+        @include media(sm) {
+            font-size: $font-size-h1-sm;
+        }
 
         &::before {
             content: '';
@@ -74,12 +84,13 @@
 
     &__disc {
         margin: 0;
+        font-size: 18px;
+
+        @include media(sm) {
+            font-size: 14px;
+        }
     }
 }
-
-.btn {}
-
-.form-btn {}
 
 .form {
 
@@ -90,8 +101,13 @@
         border: none;
         border-bottom: 1px solid $color-night-blue;
         padding: 10px 5px;
-        margin-bottom: 30px;
         background: transparent;
         margin-bottom: 30px;
+
     }
+}
+
+.just-validate-error-field {
+    color: rgb(184, 17, 17);
+    font-size: 18px;
 }
