--- a/students/umienchuk_oksana/project_second_monticello/src/css/_hero.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_hero.scss
@@ -1,7 +1,3 @@
-// * {
-//     outline: 2px solid red;
-// }
-
 .hero {
     height: 100vh;
 }
@@ -36,7 +32,7 @@
             bottom: 0;
             right: 0;
             left: 0;
-            background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
+            background-image: $linear-gradient;
             z-index: 2;
         }
     }
@@ -68,7 +64,7 @@
         white-space: nowrap;
         color: $header-title;
         font-size: $font-size-h1;
-        font-weight: 700;
+        font-weight: $font-weight-title;
         letter-spacing: 8px;
         margin: 0 0 20px;
 
@@ -89,7 +85,7 @@
         text-align: center;
         color: $header-title;
         font-size: 18px;
-        font-weight: 400;
+        font-weight: $font-weight;
         letter-spacing: 5.4px;
         text-transform: uppercase;
     }
@@ -101,7 +97,7 @@
         // white-space: nowrap;
         color: $header-title;
         font-size: 80px;
-        font-weight: 700;
+        font-weight: $font-weight-title;
         letter-spacing: 8px;
         margin: 0 0 20px;
         text-transform: uppercase;
@@ -127,17 +123,12 @@
     }
 }
 
-.icon-img {
-    fill: aqua;
-}
-
 .slick-list {
     overflow: hidden;
 }
 
 .slick-arrow.slick-disabled {}
 
-/* Точки (булиты) */
 .hero-slider .slick-dots {
     display: flex;
     align-items: center;
@@ -153,7 +144,6 @@
     }
 }
 
-/* Список точок */
 .hero-slider .slick-dots li {
     list-style: none;
     margin: 10px 0;
@@ -163,7 +153,6 @@
     }
 }
 
-/* Елемент точки */
 .hero-slider .slick-dots li button {
     font-size: 0;
     height: 10px;
@@ -175,7 +164,6 @@
     padding: 0;
 }
 
-/* Активна точка */
 .hero-slider .slick-dots li.slick-active button {
     background-color: $color-white;
 }
@@ -200,7 +188,7 @@
         opacity 0.5s ease-in-out;
 
     &.bg-scroll {
-        background-color: #7E5AFF;
+        background-color: $img-bg-second;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
         opacity: 1;
     }
