--- a/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_gallery.scss
@@ -11,7 +11,6 @@
     &__title {
         position: relative;
         color: $color-night-blue;
-        // text-align: center;
         font-size: 44px;
         font-weight: $font-weight-title;
         margin-bottom: 90px;
@@ -64,12 +63,7 @@
         }
     }
 
-    &__grid-item {
-
-        // .gallery__img-wrap
-
-        &__img-wrap {}
-    }
+    &__grid-item {}
 
     &__link {
         &:nth-child(1) {
