--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
@@ -66,8 +66,6 @@
             transform: translate(-50%, -50%);
         }
     }
-
-    &__info {}
 }
 
 .info {
@@ -96,7 +94,7 @@
 }
 
 .form {
-    &>input {
+    & input {
         width: 100%;
         color: $color-black;
         font-family: Montserrat, $fallback;
@@ -109,6 +107,10 @@
         padding: 10px 5px;
         margin-bottom: 30px;
         background: transparent;
+    }
+
+    &__input-wrap {
+        position: relative;
     }
 }
 
@@ -130,4 +132,12 @@
     @include media(sm) {
         float: none;
     }
+}
+
+.just-validate-error-label {
+    position: absolute;
+    bottom: 0;
+    font-size: 14px;
+    border-radius: 4px;
+    padding: 3px;
 }
