--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_get-in-touch.scss
@@ -33,7 +33,7 @@
 
     &::after {
         content: "";
-        background: url('../../images/painted-city.png') no-repeat bottom;
+        background: url('../images/painted-city.png') no-repeat bottom;
         background-size: contain;
         opacity: 0.1;
         position: absolute;
