--- a/students/tiselko_iryna/exam_js-module/src/css/_variables.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/_variables.scss
@@ -44,6 +44,7 @@ $default-line-height: 30px;
 $default-letter-spacing: normal;
 $main-font: $default-font-name, $fallback;
 $secondary-font: $secondary-font-name, $fallback;
+$font-sub: $font-sub-menu, $fallback;
 $font-path: './fonts/';
 
 //h1
