--- a/students/tiselko_iryna/exam_js-module/src/css/header/_menu.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/header/_menu.scss
@@ -42,6 +42,12 @@
 		&__item {
             position: relative;
 
+            &.active {
+                &::before{
+                    background-color: $white-color;
+                }
+            }
+
             &:last-of-type {
                 display: none;
             }
