--- a/students/tiselko_iryna/exam_js-module/src/css/_fonts.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/_fonts.scss
@@ -1,7 +1,6 @@
-@include font-face ('montserrat-v25-latin-regular', 400); 
-@include font-face ('montserrat-v25-latin-700', 700); 
-@include font-face ('source-sans-3-v9-latin-regular', 400, $font-sub-menu); 
-@include font-face ('open-sans-v35-latin-regular', 400, $secondary-font); 
-@include font-face ('open-sans-v35-latin-italic', 400, $secondary-font, italic);
-@include font-face ('bootstrap-icons');
+@include font-face ('open-sans-v35-latin-regular', 400); 
+@include font-face ('open-sans-v35-latin-italic', 400, italic);
+@include secondary-font-face('montserrat-v25-latin-regular', 400);
+@include secondary-font-face('montserrat-v25-latin-700', 700);
+@include font-face ('source-sans-3-v9-latin-regular', 400, normal, 'Source Sans 3'); 
 
