--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/_variables.scss
@@ -29,6 +29,7 @@ $font-path: './fonts/';
 $title-font-name: 'Montserrat';
 $title-font: $title-font-name, $fallback;
 
+$base-img-path: '../';
 // containers
 $container-padding: 15px;
 $container-max-width: 1600px;
