--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
@@ -10,7 +10,7 @@
 
     &::before {
         content: "";
-        background: url('../images/painted-city2.png');
+        background: url(#{$base-img-path}/images/painted-city2.png);
         background-repeat: no-repeat;
         background-size: contain;
         background-position: bottom;
