--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/footer/_footer.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/footer/_footer.scss
@@ -9,7 +9,7 @@
 
     &::before {
         content: "";
-        background: url('../images/shadow1.png') no-repeat top;
+        background: url(#{$base-img-path}/images/shadow1.png) no-repeat top;
         background-size: contain;
         position: absolute;
         top: 0;
