--- a/students/savchak_marharyta/exam_1/src/css/_mixins.scss
+++ b/students/savchak_marharyta/exam_1/src/css/_mixins.scss
@@ -76,6 +76,8 @@
         max-width: $default-width;
         margin: 0 auto;
         padding: 0 $gap;
+        padding-left: 300px;
+        padding-right: 300px;
     }
 }
 
