--- a/students/savchak_marharyta/exam_1/src/css/_variables.scss
+++ b/students/savchak_marharyta/exam_1/src/css/_variables.scss
@@ -41,6 +41,13 @@ $default-count-col: 12;
 $default-width: 1920px;
 
 $breack-points: (
+    "xxxxxxxlg":1780px,
+    "xxxxxxlg":1710px,
+    "xxxxxlg":1625px,
+    "xxxxlg":1540px,
+    "xxxlg":1450px,
+    "xxlg":1370px,
+    "xlg": 1280px,
     "lg": 1200px,
     "md": 992px,
     "sm": 768px,
