--- a/students/savchak_marharyta/exam_1/src/css/main/_footer.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_footer.scss
@@ -4,10 +4,12 @@
     // .footer__container
 
     &__container {
-        padding: 80px 823px;
+        padding-top: 85px;
+        padding-bottom: 80px;
         display: flex;
         flex-direction: column;
         gap: 20px;
+        margin: 0;
     }
 
     // .footer__row
@@ -62,7 +64,7 @@
 
     &__img {
         color: $white;
-        height: 35px;
+        height: 33px;
     }
 }
 
