--- a/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_heroblock.scss
@@ -31,8 +31,8 @@
         background-color: $white;
         margin: 0 auto;
         position: relative;
-        padding: 21px 34px;
         margin-bottom: 214px;
+        padding: 18px 31px;
         width: 580px;
     }
 
@@ -42,8 +42,10 @@
         font-size: 14px;
         color: $light-gray;
         border: none;
+        outline: none;
+        padding: 3px 3px;
         letter-spacing: 2.8px;
-        width: 572px;
+        width: 370px;
     }
 
     // .heroblock__button-wrapper
@@ -93,9 +95,15 @@
         }
 
         &_arrow {
-            margin: 0 auto;
+            // margin: 0 auto;
         }
     }
+
+    &__scrolldown:hover>.arrow-wrapper {
+
+        transform: translateY(20px);
+    }
+
 }
 
 .heroblock__container {
@@ -108,4 +116,9 @@
     // margin: 0 auto;
     display: flex;
     flex-direction: column;
+}
+
+.arrow-wrapper {
+    margin: 0 auto;
+    transition: 0.5s ease-in-out;
 }
