--- a/students/savchak_marharyta/exam_1/src/css/main/_testimonial.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_testimonial.scss
@@ -3,16 +3,18 @@
     background-image: url("../../images/testimonial-bg.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50% -325px;
+    background-position: 50% -300px;
 
     &__container {
-        padding: 125px 315px 180px;
+        padding-top: 120px;
+        padding-bottom: 120px;
     }
 
     // .testimonial__row
 
     &__row {
-        padding-bottom: 60px;
+        padding-bottom: 57px;
+        margin: 0;
     }
 
     // .testimonial__title
@@ -31,6 +33,7 @@
         height: 20px;
         margin: 0;
         padding-right: 5px;
+
     }
 
     // .testimonial__img-wrapper
@@ -48,6 +51,7 @@
     &__info {
         padding: 48px 60px;
         background-color: $dark-gray;
+
     }
 
     // .testimonial__name
@@ -58,7 +62,7 @@
         font-weight: 400;
         line-height: 28px;
         font-size: 20px;
-        padding-bottom: 12px;
+        padding-bottom: 13px;
     }
 
     // .testimonial__text
